--- a/salary_data.ipynb
+++ b/salary_data.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -102,7 +102,7 @@
        "6     Sonoma      494336"
       ]
      },
-     "execution_count": 115,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -114,21 +114,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "# county_df = pd.read_csv('county_data.csv')\n",
-    "df_list = []\n",
-    "for f in glob.glob('/home/stedn/Downloads/*County.csv'):\n",
-    "    df_list.append(pd.read_csv(f,engine='python'))\n",
-    "full_df = pd.concat(df_list)\n",
-    "full_df.to_csv('county_data_full.csv')"
+    "# df_list = []\n",
+    "# for f in glob.glob('/home/stedn/Downloads/*County.csv'):\n",
+    "#     df_list.append(pd.read_csv(f,engine='python'))\n",
+    "# full_df = pd.concat(df_list)\n",
+    "# full_df.to_csv('county_data_full.csv')\n",
+    "full_df = pd.read_csv('county_data_full.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -194,7 +195,7 @@
        "Name: EmployerCounty, dtype: int64"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -205,11 +206,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "county_df = full_df.loc[full_df['EmployerCounty'].isin(['Mendocino','Humboldt','Trinity','Tehama','Glenn','Lake','Sonoma'])]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "county_df.to_csv('county_data.csv')"
    ]
   },
   {
@@ -321,6 +331,16 @@
    ],
    "source": [
     "county_df.loc[(county_df['EmployerCounty']=='Mendocino') & ((county_df['DepartmentOrSubdivision']=='Sheriff Coroner') | (county_df['DepartmentOrSubdivision']=='Jail') | (county_df['DepartmentOrSubdivision']=='Probation Office') | (county_df['DepartmentOrSubdivision']=='Juvenile Hall') | (county_df['DepartmentOrSubdivision']=='Sheriff - Cops Program Ab3229')),'DepartmentOrSubdivision']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "subind = county_df['Position'].str.contains('Correction') | county_df['Position'].str.contains('Sheriff') | county_df['Position'].str.contains('Probat') | county_df['DepartmentOrSubdivision'].str.contains('Probat') | county_df['DepartmentOrSubdivision'].str.contains('Sheriff') | county_df['DepartmentOrSubdivision'].str.contains('Jail') | county_df['DepartmentOrSubdivision'].str.contains('Juven')\n",
+    "county_df.loc[subind].to_csv('county_data_le_only.csv')"
    ]
   },
   {
